[package]
name = "churlish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concat-string = "1.0.1"
fancy-regex = "0.10.0"
clap = "3.2.5"

[profile.release]
lto = true
opt-level = 'z'  # Optimize for size.
codegen-units = 1